--- a/Weather App.html
+++ b/Weather App.html
@@ -11,7 +11,7 @@
 
     <div class="search">
         <input type="text" placeholder="Enter City Name" spellcheck="false">
-        <button><img src="C:\Users\JYOTHI PRABHU\OneDrive\Documents\Internship (Skill Lab)\Project\search.png"></button>
+        <button><img src="\Project\search.png"></button>
     </div>
 
     <div class="weather">
