--- a/Weather App.html
+++ b/Weather App.html
@@ -20,11 +20,11 @@
 
 <div class="details">
 <div class="col">
-<img src="C:\Users\JYOTHI PRABHU\OneDrive\Documents\Internship (Skill Lab)\Project\Humidity.png">
+<img src="\Project\Humidity.png">
 <span>Humidity --%</span>
     </div>
     <div class="col">
-    <img src="C:\Users\JYOTHI PRABHU\OneDrive\Documents\Internship (Skill Lab)\Project\wind.png">
+    <img src="\Project\wind.png">
     <span>Wind Speed -- km/h</span>
         </div>
     </div>
